gvtheme: Fixed image alignment for wordpress theme test

--- a/trunk/GVTheme/style.css
+++ b/trunk/GVTheme/style.css
@@ -380,15 +380,19 @@ ol.commentlist {
 }
 
 .aligncenter {
-	
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .alignleft {
 	float:left;
+	margin: 0 10px 5px 0;
 }
 
 .alignright {
 	float:right;
+	margin: 0 0 5px 10px;
 }
 
 .attachment-thumbnail {
